--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Hello mike-seger.github.io
-
-<a href="adminux/static/ui/">adminux</a>
+<br />
+<a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">adminux</a>
+<br />
