--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">adminux</a>
+<h3>Grid Experiments</h3>
+<ol>
+<li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">jSpreadsheet CE</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">ag-grid CE</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">canvas grid</a></li>
+</ol>
 <br />
