--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h3>Grid Experiments</h3>
 <ol>
 <li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">jSpreadsheet CE</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">ag-grid CE</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">canvas grid</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/">ag-grid CE</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/canvas-datagrid/">canvas-datagrid</a></li>
 </ol>
 <br />
