--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <h3>Grid Experiments</h3>
 <ol>
 <li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">jSpreadsheet CE</a></li>
+<li><a
+href="https://mike-seger.github.io/grid-experiments/w2ui/">w2ui</a></li>
 <li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/">ag-grid CE</a></li>
 </ol>
 <br />
