added more sizes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <h3>Grid Experiments</h3>
 <ol>
 <li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">jSpreadsheet CE</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/">w2ui</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/index2.html">w2ui (+140K rows)</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/">w2ui (1400 rows)</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-5000.csv">w2ui (5000 rows)</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-10000.csv">w2ui (10000 rows)</a></li>
+<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-15000.csv">w2ui (15000 rows)</a></li>
 <li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/">ag-grid CE</a></li>
 </ol>
 <br />
