--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <h3>Grid Experiments</h3>
 <ol>
-<li><a href="https://mike-seger.github.io/grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/">jSpreadsheet CE</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/">w2ui (1400 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-5000.csv">w2ui (5000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-10000.csv">w2ui (10000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-15000.csv">w2ui (15000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=cities-20000.csv">w2ui (20000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/w2ui/?csv=geonames-all-cities-with-a-population-1000.csv">w2ui (140491 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/">ag-grid CE (1400 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/?csv=cities-5000.csv">ag-grid CE (5000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/?csv=cities-10000.csv">ag-grid CE (10000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/?csv=cities-15000.csv">ag-grid CE (15000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/?csv=cities-20000.csv">ag-grid CE (20000 rows)</a></li>
-<li><a href="https://mike-seger.github.io/grid-experiments/ag-grid-ce-js/?csv=geonames-all-cities-with-a-population-1000.csv">ag-grid CE (140491 rows)</a></li>
+<li><a href="grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/?rows=1000">jSpreadsheet CE (1000 rows)</a></li>
+<li><a href="grid-experiments/w2ui/?rows=1000">w2ui (1000 rows)</a></li>
+<li><a href="grid-experiments/ag-grid-ce-js/?rows=1000">ag-grid CE (1000 rows)</a></li>
 </ol>
 <br />
