--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <h3>Grid Experiments</h3>
 <ol>
-<li><a href="grid-experiments/jspreadsheet-ce/javascript-load-csv/src/main/resources/static/ui/?rows=1000">jSpreadsheet CE (1000 rows)</a></li>
-<li><a href="grid-experiments/w2ui/?rows=1000">w2ui (1000 rows)</a></li>
-<li><a href="grid-experiments/ag-grid-ce-js/?rows=1000">ag-grid CE (1000 rows)</a></li>
+<li><a href="grid-experiments/">Grid Experiments</a></li>
 </ol>
 <br />
