--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Collection</title>
+    <title>Collection</title>
     
     <style>
         body { 
@@ -33,6 +33,6 @@
 <h3>Collection</h3>
 
 <a href="grid-experiments/">Grid Experiments</a>
+<a href="saron-compound-public/src/main/resources/static">Saron Compound Public</a>
 
-</head>
 <body>
