--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 <h3>Collection</h3>
 
 <a href="grid-experiments/">Grid Experiments</a>
-<a href="saron-compound-public/src/main/resources/static">Saron Compound Public</a>
+<a href="saron-compound-public/src/main/resources/static">Saron Calculator</a>
 
 <body>
