--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 
 <a href="grid-experiments/">Grid Experiments</a>
 <a href="saron-compound-public/src/main/resources/static/">Saron Calculator</a>
+<a href="gfx-experiments/">GFX Experiments</a>
 
 <body>
