--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 <a href="grid-experiments/">Grid Experiments</a>
 <a href="saron-compound-public/src/main/resources/static/">Saron Calculator</a>
 <a href="gfx-experiments/">GFX Experiments</a>
+<a href="embedded-ui-tests/">Embedded UI Tests</a>
 
 <body>
