--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 <a href="saron-compound-public/src/main/resources/static/">Saron Calculator</a>
 <a href="gfx-experiments/">GFX Experiments</a>
 <a href="embedded-ui-tests/">Embedded UI Tests</a>
+<a href="7-segment-screen-clock-web/">7 segment screen clock (web)</a>
 
 <body>
