--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 <a href="gfx-experiments/">GFX Experiments</a>
 <a href="embedded-ui-tests/">Embedded UI Tests</a>
 <a href="7-segment-screen-clock-web/">7 segment screen clock (web)</a>
+<a href="wordled/">Wordled</a>
 
 <body>
