Add link to Polaris Player 2 in index.htmlpolaris player 2

--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
 <a href="embedded-ui-tests/">Embedded UI Tests</a>
 <a href="7-segment-screen-clock-web/">7 segment screen clock (web)</a>
 <a href="wordled/">Wordled</a>
-
-<body>
+<a href="polaris-player-2/public/">Polaris Player 2</a>
+    
+</body>
+</html>
